src/k8s/bases/homebridge/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homebridge
  labels:
    name: homebridge
