src/k8s/bases/homebridge/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: homebridge.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homebridge-ui-svc
                port:
                  name: 80-tcp
